--- a/main.css
+++ b/main.css
@@ -14,10 +14,20 @@ body
     position: relative; /*Telling child elements to position relative to wrapper instead of body*/
     height: 70%; /* height of div*/
     width: 60vw; /* width of div - VIEWPORT*/
+    max-width: 100vw;
     top: 50%; /* moves it 50% from top of .body*/
     left: 50%; /* moves it 50% from left of .body*/
     transform: translate(-50%, -50%);/* moving it back 50% of .wrapper*/
     box-shadow: 0px 10px 50px; 
+}
+
+@media (max-width: 600px) {
+    .wrapper {
+        width: 100vw; /* width of div - VIEWPORT*/
+        height: 50%; /* height of div*/
+        font-size: 80%;
+    }
+
 }
 
 h2, h3 {
@@ -121,3 +131,15 @@ button {
 }
 
 
+@media (max-width: 600px) {
+    .wrapper {
+        width: 90vw; /* width of div - VIEWPORT*/
+        height: 50%; /* height of div*/
+        font-size: 80%;
+
+    }
+
+    button {
+        font-size: 75%;
+    }
+}
